@@ -1,3 +1,8 @@
+2010-06-17  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/macroexp.el (macroexpand-all-1): Put back special
+	handling for `lambda' (misunderstanding).
+
 2010-06-16  Jay Belanger  <jay.p.belanger@gmail.com>
 
 	* calc/calc-poly.el: (math-accum-factors):  Make sure that
